# ChangeLog for virtual/ruby-rdoc
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/virtual/ruby-rdoc/ChangeLog,v 1.31 2014/10/10 09:03:19 graaff Exp $

  10 Oct 2014; Hans de Graaff <graaff@gentoo.org> -ruby-rdoc-2.ebuild:
  Remove masked jruby 1.6 version.

  19 Apr 2014; Manuel Rüger <mrueg@gentoo.org> -ruby-rdoc-0.ebuild:
  Remove ruby18 ruby-rdoc virtual. See bug #434064.

  26 Jan 2014; Agostino Sarubbo <ago@gentoo.org> ruby-rdoc-3.ebuild:
  Stable for alpha, wrt bug #483254

  26 Jan 2014; Agostino Sarubbo <ago@gentoo.org> ruby-rdoc-3.ebuild:
  Stable for sparc, wrt bug #483254

  05 Jan 2014; Hans de Graaff <graaff@gentoo.org> ruby-rdoc-0.ebuild,
  ruby-rdoc-1.ebuild:
  Drop s390 and sh stable flags for ruby.

  29 Dec 2013; Markus Meier <maekke@gentoo.org> ruby-rdoc-3.ebuild:
  arm stable, bug #483254

*ruby-rdoc-4 (26 Dec 2013)

  26 Dec 2013; Hans de Graaff <graaff@gentoo.org> +ruby-rdoc-4.ebuild:
  Add ruby21.

  20 Dec 2013; Akinori Hattori <hattya@gentoo.org> ruby-rdoc-3.ebuild:
  ia64 stable wrt bug #483254

  15 Dec 2013; Agostino Sarubbo <ago@gentoo.org> ruby-rdoc-3.ebuild:
  Stable for ppc64, wrt bug #483254

  15 Dec 2013; Agostino Sarubbo <ago@gentoo.org> ruby-rdoc-3.ebuild:
  Stable for ppc, wrt bug #483254

  05 Sep 2013; Jeroen Roovers <jer@gentoo.org> ruby-rdoc-3.ebuild:
  Stable for HPPA (bug #483254).

  01 Sep 2013; Agostino Sarubbo <ago@gentoo.org> ruby-rdoc-3.ebuild:
  Stable for x86, wrt bug #483254

  01 Sep 2013; Agostino Sarubbo <ago@gentoo.org> ruby-rdoc-3.ebuild:
  Stable for amd64, wrt bug #483254

*ruby-rdoc-3 (07 Jul 2013)

  07 Jul 2013; Hans de Graaff <graaff@gentoo.org> +ruby-rdoc-3.ebuild:
  Add ruby20 support.

  28 Jan 2013; Alexis Ballier <aballier@gentoo.org> ruby-rdoc-0.ebuild,
  ruby-rdoc-1.ebuild:
  keyword ~amd64-fbsd

  06 Nov 2012; Jeroen Roovers <jer@gentoo.org> ruby-rdoc-1.ebuild:
  Stable for HPPA (bug #411507).
