@@ -4,12 +4,13 @@ Hash: SHA256
 EBUILD ruby-rdoc-1.ebuild 1374 SHA256 d7edd2c3a9db585814ff10646d0525789aee93edfaef7081420398b98c34c957 SHA512 179b30216ff351401192cd4ee987e17f422a544a1a6c405a6feb5eb7e0381bbd4cf0142bd8116be50993517ef77b2f64180a52d7701b394568af999af68204e4 WHIRLPOOL ec458c5d9c4f32ed5b1d045c5fa094a9dda79c4d83479bb5e3d4815d041fb7f5b67500b13902f63663a91d4d172082946fb1145e7c41ac62e43ad8a86e9b4499
 EBUILD ruby-rdoc-3.ebuild 1339 SHA256 b9cd152e6b16446683b2ec56ea658d1ec20f474aa7db8475d926d1730f36337b SHA512 e69fe08155489fe4baddb11a82f6fddd7cd965dd4eee6fd3f89944f7cb43b8f0fc9ab6c3ae7be3ab6c5b2c40476efe66acda34e1f3b217d5afa0928baa7842a2 WHIRLPOOL c8f2ff631aa9be1ff49ff9860ad34b84853bebb7b1a6c6f7375375bccadc57c199be2d2e1b9cd26dde8cd2dd2dbf38ef8cb5cf05a8f01636e9ac048e08436efe
 EBUILD ruby-rdoc-4.ebuild 1350 SHA256 45af838295e854c3e096017b998cb0fb507d6d89ea772f0ec9a95c78f4664ca7 SHA512 b098793b5be130ec15b815885f41aee2eb77e3b67b3bccd3358b481d782f2f6b1530d77c0f51f9a983cc1983ddf07744fa661801caafef7edcb37a2506503698 WHIRLPOOL 8c55a97a7d8b8c99a93c767983c5facd750e2163d30ebcb2120546054c21bce3b2ac5c332612a4575f2fa5e12147bee33fb8d587ba00f318dcd0334ac3c008c3
-MISC ChangeLog 3872 SHA256 bcc748826a1b35e6ef6510b50dce179348d033669b40f20ce5492aa5f925007b SHA512 5df33208694c1ff222c441ed39f7ba2e2c27d58033d4a4d6065d681db34e77a73f4ad083342192fb0ebfd39b6686c90b77c3bbc76081108b06b7e4381cee23db WHIRLPOOL 133d8d82278bca77a64adb9ea732923566c357e55c356021ff2da520436dd4b61e466c547254c1a116faea1cf93a5ddaafb059fd66e32d53da6332449c35e7eb
+EBUILD ruby-rdoc-5.ebuild 1350 SHA256 cc2b9eb12dd2735d3923415c933f91062d9405b87abe279e8c750965cff19c96 SHA512 728b8b3dcbfeae2f1f0ed32e6df71116f9549f90d8a174543fae438b7705140f1c5052154ec8abe529e1c24f3d18c7ee63247ab0b3de579d9e37cd780ff35db6 WHIRLPOOL 56958cb206e91dc34fb417e94356177718d018828ebad59ef8d452b8611ac8915fcfd7ae496c46eb0d5ab348c76da6fc32cfa6d2310b74ee45832627e538c93b
+MISC ChangeLog 3998 SHA256 0d4b3d9587c42756680af50838da21326dc508cc74c567a1abad0439974beaaf SHA512 cda2a07a350dfe667601314000644ec750d33397577fa7fa413baf13b01795f4f4740699b2c5cf9993d1171d5a1872185f2cb82cc6cf406b09d161c37714e875 WHIRLPOOL 2f40c59d02949e8d865e1f45a32747ed9f7cb6def7ead42b2e93a8c4346c05bcb093aa206fe8052571664edd389ff8553dee76f51b946e10173ea5ed1274e53f
 MISC metadata.xml 157 SHA256 11fba03a217e2d996f5cd8895493a5692ece8ddac2c1a2dfc71d0e830555121c SHA512 0cec73b966de88015ea4c7212723d848d367608aa93658bb945f298a8000c4ba8aba73c9eb8481859fb5bbed45e80dae32c628caf81e027a4ad8eafa7e632851 WHIRLPOOL 4da25c81e21173ad8b7b5f35b056264869d9a16741062aa4422c5ea1aa9e73da8eb700b0d54de84c169d702fbb3f41ed157c9dc7c9daac110849ae84715c051b
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v2
 
-iF4EAREIAAYFAlQ3oNgACgkQiIP6VqMIqNdtoQD/VAe/+f2i+nxl4zPlb21ne96U
-+a6ptOcA+AjfSX+ndQoA/iQGOteA5RglH5NSYx9FJTDqvxMtq+Uluycxh88l7aGw
-=Uj1r
+iF4EAREIAAYFAlSfHyoACgkQiIP6VqMIqNd3cgEAicPLwvo/oMZpKqDvDRNqtfhF
+kbSQQzzNlTqli+/udFAA/0jAs+apDVqionoyKeZbDW8a7Wz0tyFWrZdGZ7V2j2Ii
+=uaFx
 -----END PGP SIGNATURE-----
