@@ -1,6 +1,11 @@
 # ChangeLog for virtual/ruby-rdoc
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/virtual/ruby-rdoc/ChangeLog,v 1.31 2014/10/10 09:03:19 graaff Exp $
+# $Header: /var/cvsroot/gentoo-x86/virtual/ruby-rdoc/ChangeLog,v 1.32 2014/12/27 21:05:45 graaff Exp $
+
+*ruby-rdoc-5 (27 Dec 2014)
+
+  27 Dec 2014; Hans de Graaff <graaff@gentoo.org> +ruby-rdoc-5.ebuild:
+  New version for ruby22.
 
   10 Oct 2014; Hans de Graaff <graaff@gentoo.org> -ruby-rdoc-2.ebuild:
   Remove masked jruby 1.6 version.
